# fflipper

./: .gitignore  README.md  clipper.py  developing.md  fflipper.py  pyelan.py  pyproject.toml  run_app.py  setup.py
.github/workflows/: fflipper-test.yml  release.yml
dev/: entitlements.plist  pycodesign.ini  pycodesign.py
fflipper/: __init__.py  about  clipper.py  fflipper.py  pyinstaller.py  utils.py
fflipper/tests/: test_utils.py
logo/: fflipper.icns  readme.md
